# marcoforlin.github.io

./: .gitignore  README.md  Untitled.canvas  all_daos.json  all_daos_updated.json  dao_list.md  daos_links.csv  find_partners.py  impactdaos.json  impactdaos2.json  index.html  links.py  merge.py  merged_impactdaos.json  merged_impactdaos_wlinks.json  pyproject.toml  update_nodes.py
